# btc-trading-bot

./: .gitignore  PROJECT.md  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
.claude/: launch.json
[OLD]config/: logging.yaml
[OLD]config/bots/: grid_optimized.yaml  ml_bot_catboost.yaml  ml_bot_gru.yaml  ml_bot_patchtst.yaml  ml_bot_xgb.yaml  rl_bot_sac.yaml  trend.yaml  trend_optimized.yaml
[OLD]config/optimization/: gru.yaml  lightgbm.yaml
[OLD]config/training/: gru_experiment_1.yaml  gru_experiment_2.yaml  ppo_optimized.yaml  random_forest_optimized.yaml  rf_experiment_1.yaml  (+2 more)
alembic/: env.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: demo.yaml  settings.yaml
core/: config.py  config_utils.py  models.py
docs/: 00_START_HERE.md  01_ARCHITECTURE.md  02_GATE_SYSTEM.md  03_ML_RL_MODELS.md  04_CONFIGURATION.md  05_DATABASE.md  06_EXTENDING.md  07_OPERATIONS.md  08_DECISIONS.md  AUDIT.md  CONFIGURATION.md  DATABASE.md  DECISIONS.md  DOCUMENTATION_ASSESSMENT.md  EXTENDING.md  GATE_SYSTEM_REVIEW.md  MODELS.md  PROJECT.md  ROADMAP.md  hyperparameter_rationale.md  oracle-vm-cheatsheet.md
exchanges/: paper.py
monitoring/: dashboard.py  telegram_notifier.py
scripts/: check_data_completeness.py  diagnose_demo.py  download_binance_vision.py  download_blockchain.py  download_data.py  download_fear_greed.py  download_futures.py  optimize_bots.py  optimize_models.py  reset_demo.py  run_comparison.py  run_demo.py  test_pipeline.py  test_progress.py  train_gate_regime.py  train_models.py  train_rl.py  update_binance_vision.py  update_blockchain.py  update_data.py  update_fear_greed.py  update_futures.py  validate_data.py
tests/: conftest.py
(+187 files in other folders)
