[tool.poetry]
name = "btc-trading-bot"
version = "0.1.0"
description = "Algorithmic trading platform for BTC"
authors = ["Arnau"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.47"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"