[tool.poetry]
name = "btc-trading-bot"
version = "0.1.0"
description = "Algorithmic trading platform for BTC"
authors = ["Arnau"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.47"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"
ccxt = "^4.5.40"
pandas = ">=2.0,<3.0"
numpy = "^2.4.2"
pyyaml = "^6.0.3"
mlflow = "^3.10.0"
optuna = "^4.7.0"
scikit-learn = "^1.8.0"
xgboost = "^3.2.0"
gymnasium = "^1.2.3"
stable-baselines3 = "^2.7.1"
torch = "^2.10.0"
python-telegram-bot = "^22.6"
streamlit = "^1.54.0"
plotly = "^6.5.2"
apscheduler = "^3.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"